swag compiles
